# mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cursor-integration.md
src/security_use_mcp/: __init__.py  models.py  server.py
src/security_use_mcp/handlers/: __init__.py  compliance_handler.py  dependency_handler.py  github_handler.py  iac_handler.py  init_handler.py  sbom_handler.py  sensor_handler.py
tests/: __init__.py  test_handlers.py  test_init_handler.py  test_integration.py  test_new_handlers.py  test_server.py
