[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-use-mcp"
version = "0.1.0"
description = "MCP server exposing security scanning tools for AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Shaurya Aggarwal", email = "aggarw52@purdue.edu" }
]
keywords = ["mcp", "security", "vulnerability", "scanning", "cursor", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "security-use>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
security-use-mcp = "security_use_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/security_use_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
